[package]
name = "rustart"
version = "0.1.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "logd"
path = "src/logd.rs"

[dependencies]
libc = "0.2.73"
failure = "0.1.7"
#libsystemd = { git = "https://github.com/jabedude/libsystemd-rs", branch = "unix-sock" }
libsystemd = { path = "../libsystemd-rs" }
log = "0.4.11"
simple-logging = "2.0.2"
mio = { version = "0.7.0", features = ["os-poll", "os-util", "uds"] }
